# WindowsBanglaKeyboard

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  test-build.yml
app/: BanglaPhonetic.def  CMakeLists.txt
app/include/: Globals.h
app/src/: CandidateWindow.cpp  CandidateWindow.h  ClassFactory.cpp  DisplayAttribute.cpp  DisplayAttribute.h  EditSession.h  Globals.cpp  LangBarButton.cpp  LangBarButton.h  Register.cpp  TextService.cpp  TextService.h  dllmain.cpp
build-arm64/: .ninja_deps  .ninja_log  build.ninja
docs/: ARCHITECTURE.md  DISTRIBUTION.md  KEYMAP.md  RELEASE_NOTES.md
engine/: CMakeLists.txt
engine/include/bnphonetic/: Suggester.h  Transliterator.h
engine/src/: Suggest.cpp  Transliterator.cpp
harness/: CMakeLists.txt  main.cpp
installer/: KEYMAP.html  README.md  dictionary.tsv  install.ps1  setup.iss  uninstall.ps1  words.tsv
scripts/: build-wordlist.ps1  build.bat  package.bat  release.ps1  update-winget.ps1  winget-fix-arches.ps1
tests/: CMakeLists.txt  test_transliterator.cpp
winget/: Amerganim.AmaderBanglaKeyboard.installer.yaml  Amerganim.AmaderBanglaKeyboard.locale.en-US.yaml  Amerganim.AmaderBanglaKeyboard.yaml
